--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
    <div class="card-white"> 
     <h1>Hello, I'm Alice!</h1>
-    <img src="images/profile-picture.jpg" class="img-circle" alt="Alice Cochet"height="200" width="210">
+    <img src="images/profile-picture.JPG" class="img-circle" alt="Alice Cochet"height="200" width="210">
     <p>
 	I'm in a management school called IESEG, located in La Défense. My favourite courses are marketing and sales techniques.
     </p>
